--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>-->
+    <script src="./js/jquery.min.js"></script>
     <script src="./js/js.js"></script>
 </head>
 
