Adding report workflow

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,16 @@
 
 <body>
     <div id="outputDiv">tsrsre</div>
+    <table>
+    <tr>
+    	<td>
+    		<div id="workflow">
+    			<span id="one" style="display: inline-block;;width:200px" isRandomTagOk="true">a</span>
+    			<span id="two" style="display: inline-block;;width:200px" isRandomTagOk="false">b</span>
+    			<span id="three" style="display: inline-block;;width:200px" isRandomTagOk="true">c</span>
+    		</div>
+    	</td>
+    </table>
 </body>
 
 </html>
