--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,17 @@
 <html>
 
 <head>
+    <link href="./css/style.css" media="all" rel="stylesheet" type="text/css" />
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>-->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/js.js"></script>
 </head>
 
 <body>
-    <div id="outputDiv">tsrsre</div>
-    <table>
-    <tr>
-    	<td>
-    		<div id="workflow">
-    			<span id="one" style="display: inline-block;;width:200px" isRandomTagOk="true">a</span>
-    			<span id="two" style="display: inline-block;;width:200px" isRandomTagOk="false">b</span>
-    			<span id="three" style="display: inline-block;;width:200px" isRandomTagOk="true">c</span>
-    		</div>
-    	</td>
-    </table>
+    <div id="header"></div>
+    <div id="workflow">
+        <ul></ul>
+    </div>
 </body>
+
 </html>
