--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="header"></div>
     <div id="workflow">
-        <ul></ul>
+        <ul id="workflowMenuList"></ul>
     </div>
 </body>
 
