--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <span id="_id"></span>
     <div id="header"></div>
     <div id="workflow">
         <ul id="workflowMenuList"></ul>
